# PinPointStudio

./: .gitignore  BUILDING.md  CLUBANDBALLDETECTION.md  CMakeLists.txt  Info.plist.in  LICENSEDEPS.md  PinPoint.desktop  PinPoint.rc  PinPointStudio.desktop  PinPointStudio.rc  README.md
.github/workflows/: release.yml
cmake/: DevCodesign.cmake  PatchEspeakNg.cmake  PatchLibsamplerate.cmake  PinPointPackaging.cmake  pp_deps.h.in  pp_version.h.in
docs/: IMU_AXIS_REFERENCE.md  IMU_FRAME_CONTRACT.md  IMU_REARCHITECTURE.md  PERSONAS.md  PINPOINT_QML_DESIGN_SYSTEM.md  RELOAD_REPLAY_DESIGN.md  SHOTDETECTION.md  SHOT_ANALYZER_DESIGN.md  SHOT_ANALYZER_M1_WRIST.md  SHOT_ANALYZER_VIZ.md  SHOT_DETECTION_IMPL.md  WRISTCALIBRATION.md  WT901BLE67_Protocol.md  event_buffer_design.md  event_buffer_developer_guide.md  pinpoint-persona-assessment.md  pinpoint-ux-design.md  shot_analyzer_developer_guide.md  shot_detector_developer_guide.md  swing_export_developer_guide.md
docs/aesthetic/: pinpoint-aesthetic-concepts.md
docs/design/: BALL_DETECTOR_DESIGN.md  IMU_FRAME_CONTRACT.md  SHOTDETECTION.md  SHOT_ANALYZER_DESIGN.md  analysis_pipeline_fusion_architecture_proposal.md  analysis_pipeline_fusion_architecture_proposal.md.md  ball_detection_calibration.md  ball_detection_v2.md  ball_detection_v2_exemplar_explained.md  ball_detector_design.md  club_track_v3_exemplar_explained.md  club_tracking_v3_design.md  clubhead_detection_design.md  clubhead_length_status.md  event_buffer_design.md  grf_estimation_design_briefing.md  imu_frame_contract.md  linux_update.md  low_point_metric_design.md  macos_update.md  pinpoint_qml_design_system.md  plane_coupled_kinematic_sequence_proposal.md  reload_replay_design.md  scoring_metrics_presentation.html  shaft-detection-improvements.md  shaft_detection_exemplar_findings.md  shaft_detection_improvements.md  shaft_detection_presentation.html  shaft_detection_skeleton_design.md  shaft_position_first_design.md  shot_analyzer_design.md  shot_analyzer_viz.md  shotdetection.md  stripe_fusion_design.md  validation_tuning_presentation.html  vendor_neutral_gpu.md  wholebody_pose_design.md  windows_update.md  wristmotion_assessment_design.md
docs/developer/: analysis_pipeline_developer_guide.md  event_buffer_developer_guide.md  macos_code_signing_developer_guide.md  metric_catalogue_developer_guide.md  resource_profiler_developer_guide.md  shot_analyzer_developer_guide.md  shot_detector_developer_guide.md  swing_export_developer_guide.md  swinglab_developer_guide.md  testing_developer_guide.md
docs/implementation/: IMU_IO_THREAD_IMPL.md  IMU_REARCHITECTURE.md  SEGMENTATION_V3_IMPL.md  SHAFT_TRACKER_IMPL.md  SHOT_ANALYZER_M1_WRIST.md  SHOT_DETECTION_IMPL.md  SWINGLAB_IMPL.md  ball_detection_v2_impl_plan.md  clubhead_exemplar_plan.md  code_quality_review.md  corpus_v1_validation_plan.md  imu_io_thread_impl.md  imu_pipeline_audit.md  imu_rearchitecture.md  linux_release_runbook.md  linux_update_impl.md  macos_release_runbook.md  macos_update_impl.md  score_estimand_alignment_plan.md  stt_audit.md  (+14 more)
packaging/: build_installer.ps1  make_appcast.ps1  make_appcast_mac.sh
src/Analysis/tests/: CMakeLists.txt  analysis_profiling_test.cpp  analysis_stage_test.cpp  arbiter_test.cpp  archetype_bands_test.cpp  ball_activity_test.cpp  ball_anchor_test.cpp  ball_baseline_io_test.cpp  ball_position_test.cpp  camera_projection_test.cpp  club_length_fusion_test.cpp  clubhead_measure_test.cpp  clubhead_temporal_test.cpp  composite_score_v2_test.cpp  confidence_test.cpp  dashboard_reductions_test.cpp  event_refine_test.cpp  fault_rules_test.cpp  foot_metrics_test.cpp  frame_decode_test.cpp  hand_axis_test.cpp  head_track_test.cpp  imu_calibration_test.cpp  imu_driver_frame_test.cpp  imu_sample_test.cpp  imu_test_stubs.cpp  kinematic_sequence_test.cpp  kinematic_series_test.cpp  live_wrist_angles_test.cpp  metric_catalogue_test.cpp  orientation_filter_test.cpp  orientation_refuse_test.cpp  phase_segmenter_test.cpp  phase_signals_test.cpp  pipeline_test.cpp  pose_crop_test.cpp  pose_smoother_test.cpp  pose_synthesis_test.cpp  pose_wrist_angle_source_test.cpp  reference_bands_test.cpp  (+30 more)
src/Audio/tests/: CMakeLists.txt  acoustic_shot_detector_test.cpp
src/Buffer/: CMakeLists.txt  event_buffer.cpp  event_buffer.h  event_buffer_config.h  format_descriptor.h  imu_sample.h  pixel_format_names.h  platform.h  source_descriptor.h  source_ring.cpp  source_ring.h  source_stats.h  swing_payload_source.h  swing_window.cpp  swing_window.h  thread_policy.cpp  thread_policy.h  timeline_index.cpp  timeline_index.h  types.h  wait_flag.cpp  wait_flag.h
src/Buffer/include/pinpoint/event_buffer/: types.h
src/Buffer/src/: source_ring.cpp
src/Buffer/tests/: CMakeLists.txt  adversarial_fuzz_test.cpp  event_buffer_test.cpp  latency_benchmark.cpp  source_ring_test.cpp  swing_window_test.cpp  thread_policy_test.cpp  timeline_index_test.cpp  tsan_suppressions.txt  wait_flag_test.cpp  watchdog_test.cpp
src/Core/tests/: CMakeLists.txt  pp_gpu_metrics_test.cpp  pp_log_stub.cpp  pp_os_metrics_test.cpp  pp_profiler_compileout_test.cpp  pp_profiler_concurrency_test.cpp  pp_profiler_test.cpp  pp_stats_log_test.cpp  profiler_controller_test.cpp
src/Gui/tests/: CMakeLists.txt  reanalysis_controller_test.cpp  reanalysis_stubs.cpp  shot_list_model_test.cpp  swing_series_model_test.cpp  timeline_labels_test.cpp
src/IMU/tests/: CMakeLists.txt  eskf_gyro_units_test.cpp  impact_detector_test.cpp  imu_io_worker_test.cpp
src/Pose/tests/: CMakeLists.txt  ball_calibration_test.cpp  ball_detector_contract_test.cpp  ball_model_test.cpp  ball_temporal_parity_test.cpp  ball_temporal_test.cpp  heatmap_decode_test.cpp  pose_model_selection_test.cpp  pose_test_stubs.cpp
src/Update/tests/: CMakeLists.txt  fake_update_backend.h  linux_update_logic_test.cpp  platform_target_test.cpp  update_controller_policy_test.cpp
tests/: CMakeLists.txt  CMakePresets.json  MIGRATION.md
tests/cmake/: PinPointTests.cmake
tools/: extract_arm_segments.py  extract_body_segments.py  package_appimage.sh  package_macos.sh  render_icon.py
(+787 files in other folders)
